// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as expected at large width 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-2 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  aria-label="Edit Experiment General Data"
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    Edit
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Experiment with things. Change stuff. Profit.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-5"
                    >
                      <span
                        class="makeStyles-statusDot-10 makeStyles-staging-8"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-11"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-1"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-11"
                      title="20/11/2020, 20:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test_a11n
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-13 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                    Assign Metric
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_1
                    <span
                      class="makeStyles-primary-12 makeStyles-root-17"
                    >
                      Primary
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-lg-5"
    >
      <div
        class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
        >
          <h3
            class="MuiTypography-root makeStyles-title-18 MuiTypography-h3 MuiTypography-colorTextPrimary"
          >
            Audience
          </h3>
        </div>
        <table
          class="MuiTable-root"
        >
          <tbody
            class="MuiTableBody-root"
          >
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Platform
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <span
                  class="makeStyles-monospace-19"
                >
                  calypso
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                User Type
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <span
                  class="makeStyles-monospace-19"
                >
                  New users only
                </span>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Variations
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <table
                  class="MuiTable-root makeStyles-root-20"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Name
                      </th>
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Percent
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-25"
                      >
                        <span
                          class="makeStyles-variation-23"
                        >
                          control
                        </span>
                         
                        <div
                          aria-disabled="true"
                          class="MuiChip-root MuiChip-outlined Mui-disabled"
                        >
                          <span
                            class="MuiChip-label"
                          >
                            Default
                          </span>
                        </div>
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-25"
                      >
                        60
                        %
                      </td>
                    </tr>
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-25"
                      >
                        <span
                          class="makeStyles-variation-23"
                        >
                          test
                        </span>
                         
                      </td>
                      <td
                        class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-25"
                      >
                        40
                        %
                      </td>
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Segments
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <table
                  class="MuiTable-root makeStyles-root-26"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Locales
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-28"
                      >
                        segment_1
                         
                      </td>
                    </tr>
                  </tbody>
                </table>
                <table
                  class="MuiTable-root makeStyles-root-26"
                >
                  <thead
                    class="MuiTableHead-root"
                  >
                    <tr
                      class="MuiTableRow-root MuiTableRow-head"
                    >
                      <th
                        class="MuiTableCell-root MuiTableCell-head"
                        role="columnheader"
                        scope="col"
                      >
                        Countries
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="MuiTableBody-root"
                  >
                    <tr
                      class="MuiTableRow-root"
                    >
                      <td
                        class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-28"
                      >
                        segment_2
                         
                        <div
                          aria-disabled="true"
                          class="MuiChip-root MuiChip-outlined Mui-disabled"
                        >
                          <span
                            class="MuiChip-label"
                          >
                            Excluded
                          </span>
                        </div>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </td>
            </tr>
            <tr
              class="MuiTableRow-root"
            >
              <th
                class="MuiTableCell-root MuiTableCell-head"
                role="cell"
                scope="row"
              >
                Exposure Events
              </th>
              <td
                class="MuiTableCell-root MuiTableCell-body"
              >
                <div
                  class="makeStyles-eventList-31"
                >
                  <span
                    class="makeStyles-monospace-32"
                  >
                    No exposure events defined
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected at small width 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-34 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  aria-label="Edit Experiment General Data"
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    Edit
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Experiment with things. Change stuff. Profit.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-37"
                    >
                      <span
                        class="makeStyles-statusDot-42 makeStyles-staging-40"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-43"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-33"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-43"
                      title="20/11/2020, 20:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test_a11n
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-50 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-51"
                    >
                      calypso
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-51"
                    >
                      New users only
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root makeStyles-root-52"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                          >
                            <span
                              class="makeStyles-variation-55"
                            >
                              control
                            </span>
                             
                            <div
                              aria-disabled="true"
                              class="MuiChip-root MuiChip-outlined Mui-disabled"
                            >
                              <span
                                class="MuiChip-label"
                              >
                                Default
                              </span>
                            </div>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                          >
                            <span
                              class="makeStyles-variation-55"
                            >
                              test
                            </span>
                             
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-57"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root makeStyles-root-58"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-60"
                          >
                            segment_1
                             
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root makeStyles-root-58"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-60"
                          >
                            segment_2
                             
                            <div
                              aria-disabled="true"
                              class="MuiChip-root MuiChip-outlined Mui-disabled"
                            >
                              <span
                                class="MuiChip-label"
                              >
                                Excluded
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-63"
                    >
                      <span
                        class="makeStyles-monospace-64"
                      >
                        No exposure events defined
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-45 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                    Assign Metric
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_1
                    <span
                      class="makeStyles-primary-44 makeStyles-root-49"
                    >
                      Primary
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected with conclusion data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-66 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <div
                class=""
                title=""
              >
                <button
                  aria-label="Edit Experiment General Data"
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    Edit
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Experiment with things. Change stuff. Profit.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-69"
                    >
                      <span
                        class="makeStyles-statusDot-74 makeStyles-disabled-73"
                      />
                       
                      disabled
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-75"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-65"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-75"
                      title="20/11/2020, 20:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test_a11n
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-84 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-85"
                    >
                      calypso
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-85"
                    >
                      New users only
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root makeStyles-root-86"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-91"
                          >
                            <span
                              class="makeStyles-variation-89"
                            >
                              control
                            </span>
                             
                            <div
                              aria-disabled="true"
                              class="MuiChip-root MuiChip-outlined Mui-disabled"
                            >
                              <span
                                class="MuiChip-label"
                              >
                                Default
                              </span>
                            </div>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-91"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-91"
                          >
                            <span
                              class="makeStyles-variation-89"
                            >
                              test
                            </span>
                             
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-91"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root makeStyles-root-92"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-94"
                          >
                            segment_1
                             
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root makeStyles-root-92"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-94"
                          >
                            segment_2
                             
                            <div
                              aria-disabled="true"
                              class="MuiChip-root MuiChip-outlined Mui-disabled"
                            >
                              <span
                                class="MuiChip-label"
                              >
                                Excluded
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-97"
                    >
                      <span
                        class="makeStyles-monospace-98"
                      >
                        No exposure events defined
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-77 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <div
                class=""
                title=""
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                    Assign Metric
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_1
                    <span
                      class="makeStyles-primary-76 makeStyles-root-81"
                    >
                      Primary
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-82 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Conclusions
              </h3>
              <button
                aria-label="Edit Conclusion"
                class="MuiButtonBase-root MuiButton-root MuiButton-outlined"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiButton-label"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                    />
                  </svg>
                  Edit
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Reason the experiment ended
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Ran its course.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Conclusion URL
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://betterexperiments.wordpress.com/experiment_1/conclusion"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://betterexperiments.wordpress.com/experiment_1/conclusion
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Deployed variation
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders as expected without conclusion data 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-lg-7"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-direction-xs-column"
      >
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-100 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                General
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  aria-label="Edit Experiment General Data"
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34a.9959.9959 0 00-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                    </svg>
                    Edit
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Description
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Experiment with things. Change stuff. Profit.
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    P2 Link
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <a
                      href="https://wordpress.com/experiment_1"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      https://wordpress.com/experiment_1
                    </a>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Status
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-103"
                    >
                      <span
                        class="makeStyles-statusDot-108 makeStyles-staging-106"
                      />
                       
                      staging
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Dates
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-root-109"
                      title="20/09/2020, 20:00:00"
                    >
                      2020-09-21
                    </span>
                    <span
                      class="makeStyles-to-99"
                    >
                      to
                    </span>
                    <span
                      class="makeStyles-root-109"
                      title="20/11/2020, 20:00:00"
                    >
                      2020-11-21
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Owner
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    test_a11n
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-116 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Audience
              </h3>
            </div>
            <table
              class="MuiTable-root"
            >
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Platform
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-117"
                    >
                      calypso
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    User Type
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span
                      class="makeStyles-monospace-117"
                    >
                      New users only
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Variations
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root makeStyles-root-118"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Name
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Percent
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-123"
                          >
                            <span
                              class="makeStyles-variation-121"
                            >
                              control
                            </span>
                             
                            <div
                              aria-disabled="true"
                              class="MuiChip-root MuiChip-outlined Mui-disabled"
                            >
                              <span
                                class="MuiChip-label"
                              >
                                Default
                              </span>
                            </div>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-123"
                          >
                            60
                            %
                          </td>
                        </tr>
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-123"
                          >
                            <span
                              class="makeStyles-variation-121"
                            >
                              test
                            </span>
                             
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-123"
                          >
                            40
                            %
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Segments
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <table
                      class="MuiTable-root makeStyles-root-124"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Locales
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-126"
                          >
                            segment_1
                             
                          </td>
                        </tr>
                      </tbody>
                    </table>
                    <table
                      class="MuiTable-root makeStyles-root-124"
                    >
                      <thead
                        class="MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head"
                            role="columnheader"
                            scope="col"
                          >
                            Countries
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body makeStyles-monospace-126"
                          >
                            segment_2
                             
                            <div
                              aria-disabled="true"
                              class="MuiChip-root MuiChip-outlined Mui-disabled"
                            >
                              <span
                                class="MuiChip-label"
                              >
                                Excluded
                              </span>
                            </div>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="cell"
                    scope="row"
                  >
                    Exposure Events
                  </th>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <div
                      class="makeStyles-eventList-129"
                    >
                      <span
                        class="makeStyles-monospace-130"
                      >
                        No exposure events defined
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiToolbar-root MuiToolbar-regular MuiToolbar-gutters"
            >
              <h3
                class="MuiTypography-root makeStyles-title-111 MuiTypography-h3 MuiTypography-colorTextPrimary"
              >
                Metrics
              </h3>
              <div
                class=""
                title="Use \\"Edit in Wizard\\" for staging experiments."
              >
                <button
                  class="MuiButtonBase-root MuiButton-root MuiButton-outlined Mui-disabled Mui-disabled"
                  disabled=""
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                    Assign Metric
                  </span>
                </button>
              </div>
            </div>
            <table
              class="MuiTable-root"
            >
              <thead
                class="MuiTableHead-root"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Name
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Attribution Window
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Changes Expected
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head"
                    role="columnheader"
                    scope="col"
                  >
                    Minimum Difference
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root"
              >
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_1
                    <span
                      class="makeStyles-primary-110 makeStyles-root-115"
                    >
                      Primary
                    </span>
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 week
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      0.1 pp
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    4 weeks
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    No
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $10.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_2
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    1 hour
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      $0.50
                    </span>
                  </td>
                </tr>
                <tr
                  class="MuiTableRow-root"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    metric_3
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    6 hours
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    Yes
                  </td>
                  <td
                    class="MuiTableCell-root MuiTableCell-body"
                  >
                    <span>
                      12 pp
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
